@@ -6631,18 +6631,28 @@ test expr-47.11 {isqrt of zero} {
 } 0
 
 test expr-47.12 {isqrt of various sizes of integer} {
-    for {set i 0} {$i < 3000} {incr i} {
+    set faults 0
+    for {set i 0} {$faults < 10 && $i <= 1024} {incr i} {
 	set root [expr {1 << $i}]
 	set rm1 [expr {$root - 1}]
 	set arg [expr {1 << (2 * $i)}]
-	if {isqrt($arg-1) != $rm1} {
-	    append trouble "i = " $i ": isqrt( " $arg "-1) != " $rm1 "\n"
+	set tval [expr {isqrt($arg-1)}]
+	if {$tval != $rm1} {
+	    append trouble "i = " $i ": isqrt(" $arg "-1) == " $tval \
+		" != " $rm1 "\n"
+	    incr faults
 	}
-	if {isqrt($arg) != $root} {
-	    append trouble "i = " $i ": isqrt( " $arg ") != " $root "\n"
+	set tval [expr {isqrt($arg)}]
+	if {$tval != $root} {
+	    append trouble "i = " $i ": isqrt(" $arg ") == " $tval \
+		" != " $root "\n"
+	    incr faults
 	}
-	if {isqrt($arg+1) != $root} {
-	    append trouble "i = " $i ": isqrt( " $arg "+1) != " $root "\n"
+	set tval [expr {isqrt($arg+1)}]
+	if {$tval != $root} {
+	    append trouble "i = " $i ": isqrt(" $arg "+1) == " $tval \
+		" != " $root "\n"
+	    incr faults
 	}
     }
     set trouble
